recordAMacro: completed + autoFillThisForm: error solved + in dashboard it will check every 5 seconds if anything is added and also added scrollbar in recent activities

--- a/style.css
+++ b/style.css
@@ -422,12 +422,32 @@ input:focus.error {
     transition: all 0.3s ease;
     width: 90%;
     max-width: 1400px;
-    max-height: 800px;
+    max-height: 320px;
     text-align: left;
     margin-bottom: 10px;
     position: relative;
     overflow-y: auto;
     padding-right: 5px;
+}
+
+.recentActivitiesBox::-webkit-scrollbar {
+  width: 8px;
+}
+
+.recentActivitiesBox::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+.recentActivitiesBox::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.recentActivitiesBox::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .dashboardBox {
